inserir logotipo na navbar

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -75,6 +75,7 @@ body {
             img {
                 max-width: 80%;
                 transition: all 0.3s ease-out;
+                //background: url('../assets/images/target_logo.svg');
             }
         }
 
